# ballot-verifier

./: .clang-format  .cppcheck-suppressions.txt  .envrc  .gitignore  .ort.yml  CMakeLists.txt  Makefile  OLD_README.md  OldMakefile  README.md  cpm-package-lock.cmake  flake.nix  project.spdx.yml  setup-environment.sh  shell.nix  tutorial
.devcontainer/: Dockerfile  devcontainer.json  devcontainer.json.license  docker-compose.yml
.github/: release.yml
.github/workflows/: build.yml  ort.yml
.ort-data/: license-classifications.yml
Format.cmake/: CMakeLists.txt  README.md  cmake-format.cmake  git-clang-format.py
apps/: CMakeLists.txt  agora-airgap.cpp  interface.cpp  interface.h  main.cpp
cmake/: CPM.cmake  FindGMP.cmake  FindGMPXX.cmake  FindGmp.cmake  FindGmpxx.cmake
images/: ballot-verifier-gui.png.license
include/agora-airgap/: ElGamal.h  MixedRadix.h  NVotesCodec.h  Random.h  common.h  encrypt.h  screen.h  sha256.h
include/ballot-verifier/: BallotCodec.h  ElGamal.h  MixedRadix.h  NVotesCodec.h  Random.h  common.h  encrypt.h  screen.h  sha256.h
python/: audit.py  requirements.txt
src/: Agora.cpp  Agora.h  BallotCodec.cpp  CMakeLists.txt  ElGamal.cpp  ElGamal.h  Makefile  MixedRadix.cpp  NVotesCodec.cpp  OldMakefile  Random.cpp  Random.h  agora-airgap.cpp  common.h  encrypt.cpp  encrypt.h  integration-tests.cpp  interface.cpp  interface.h  main.cpp  screen.h  sha2.cpp  sha2.h  sha256.cpp  sha256.h  unit-tests.cpp  votes.json
src/example/: ballot.json  config
tests/: CMakeLists.txt  TestBallotCodec.cpp  TestMixedRadix.cpp  TestNVotesCodec.cpp  integration-tests.cpp  tests-main.cpp  tests.cpp  unit-tests.cpp  update_examples.sh  update_fixtures.sh
tests/example_1/: pk_1110
tests/example_1__ballot_hash_error/: ballot.json  expectations.json  update_example.sh
tests/fixtures/: common.sh
tests/fixtures/example_1/: auditable_ballot.json  config  expectations.json  plaintext_vote.json
tests/fixtures/example_1__ballot_hash_error/: auditable_ballot.json  expectations.json  update_fixture.sh
tests/fixtures/example_1__invalid_ballot_json/: auditable_ballot.json  ballot.json  expectations.json  update_fixture.sh
tests/fixtures/example_1__invalid_choice_alpha/: auditable_ballot.json  ballot.json  config  config.license  expectations.json  update_fixture.sh
tests/fixtures/example_1__invalid_choice_beta/: auditable_ballot.json  ballot.json  expectations.json.license  plaintext_vote.json  update_fixture.sh
tests/fixtures/example_1__invalid_choice_plaintext/: auditable_ballot.json  ballot.json  update_fixture.sh
tests/fixtures/example_1__invalid_choice_randomness/: auditable_ballot.json  ballot.json  config  pk_1  update_fixture.sh
tests/fixtures/example_2/: auditable_ballot.json  config  expectations.json
tests/fixtures/example_3/: auditable_ballot.json  expectations.json  plaintext_vote.json
tests/fixtures/example_3_explicit_and_implicit_invalid/: auditable_ballot.json  expectations.json  plaintext_vote.json
tests/fixtures/example_3_explicit_invalid/: auditable_ballot.json  expectations.json  plaintext_vote.json
tests/fixtures/example_3_implicit_too_many/: auditable_ballot.json  config  expectations.json  expectations.json.license  plaintext_vote.json
tests/fixtures/example_4_implicit_empty/: auditable_ballot.json  config  plaintext_vote.json
tests/fixtures/example_4_implicit_invented_answer/: auditable_ballot.json  expectations.json  plaintext_vote.json
